# graphrag-poc

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
eval/: __init__.py  ab_eval.py  ask_real_out.md  faith_calib.py  gen_ab.py  golden_demo.json  golden_real.json  golden_set.py  grow_set.py  labeled_gen.py  metrics.py  metrics_bykind.json  metrics_real.json  quality_eval.py  quality_report.py  quality_snapshot.py  question_gen.py  recall_gate.py  ru_validation.py  threshold_calib.py
eval/trial/: ab_changed_ranking.md  ab_changed_ranking_grown.md  ab_report.md  ab_report_grown.md  ab_results.json  ab_results_grown.json  faith_gold.json  full_eval_results.json  labeled_real.json  multihop_ab_report.md  multihop_ab_results.json  quality_report.md  quality_results.json  quality_snapshot_report.md  quality_snapshot_results.json  questions_grown.json  questions_real.json  recall_gate_results.json  threshold_calib.json
examples/: build_golden.py  ru_synthetic.json  seed_demo.py
tests/: conftest.py  test_ab_eval.py  test_answer.py  test_chunk.py  test_confluence_connector.py  test_embedder.py  test_enrich.py  test_faith_calib.py  test_gen_ab.py  test_git_connector.py  test_grow_set.py  test_hybrid.py  test_impact.py  test_jira_connector.py  test_labeled_gen.py  test_llm_client.py  test_metrics.py  test_quality_eval.py  test_quality_report.py  test_question_gen.py  test_recall_gate.py  test_resolve.py  test_router.py  test_ru_validation.py  test_skeleton.py  test_sync.py  test_threshold_calib.py  test_vector_index.py
(+39 files in other folders)
